# netpulse-sdk

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
docs/: PARAMETERS_REFERENCE.md  PARAMETERS_REFERENCE_EN.md
examples/: README.md  connection.py
examples/00_quickstart/: 01_single_query.py  02_batch_query.py  03_config_push.py  connection.py
examples/01_netmiko/: 01_basic_query.py  02_multi_commands.py  03_config_mode.py  04_slow_device.py  05_multi_vendor.py  06_per_device_cmd.py  07_batch_config.py  07_per_device_config.py  08_per_device_config-02.py  08_template_config.py  09_per_device_config-03.py  10_template_config.py  connection.py
examples/02_paramiko/: 01_basic_command.py  02_file_operations.py  03_service_manage.py  04_batch_servers.py  05_ssh_key_auth.py  06_per_device_cmd.py  07_long_running_task.py  08_detached_task.py  09_file_upload.py  10_file_download.py  11_sudo_execution.py  12_interactive_expect.py  13_environment_variables.py  14_working_directory.py  15_script_execution.py  16_output_parsing.py  17_webhook_notify.py  connection.py
examples/03_pyeapi/: 01_json_output.py  02_structured_data.py  03_batch_config.py  04_per_device_cmd.py  connection.py
examples/04_result_handling/: 01_iterate_results.py  02_filter_results.py  03_quick_access.py  04_result_attributes.py  05_error_info.py  06_serialization.py
examples/05_advanced/: 01_vault_credential.py  02_webhook_callback.py  03_template_render.py  04_queue_strategy.py  05_context_manager.py  06_debug_mode.py  07_template_parse.py  08_connection_test.py  09_job_management.py  (+5 more)
netpulse_sdk/: __init__.py  client.py  config.py  enums.py  error.py  job.py  result.py  types.py  utils.py
scripts/: .pypirc.example  publish.sh
tests/: conftest.py  test_advanced.py  test_client.py  test_error.py  test_group.py  test_job.py  test_result.py
(+2 files in other folders)
