[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netpulse-sdk"
version = "0.2.1"
description = "Python SDK for NetPulse Network Automation Platform"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "NetPulse Team", email = "44155313+Nativu5@users.noreply.github.com" },
]
maintainers = [
    { name = "NetPulse Team", email = "44155313+Nativu5@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["network", "automation", "netpulse", "sdk", "api-client"]

dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
"Homepage" = "https://github.com/scitix/netpulse"
"Documentation" = "https://netpulse.readthedocs.io"
"Repository" = "https://github.com/scitix/netpulse"
"SDK Documentation" = "https://github.com/scitix/netpulse/tree/main/sdk"

[tool.setuptools]
packages = ["netpulse_sdk"]

[tool.setuptools.package-dir]
netpulse_sdk = "netpulse_sdk"

[tool.ruff]
line-length = 100

